Fix the about secion so it all aligns and looks good. Add font awesome icons to the footer, use display grid so the social links are horizontal. Add about section media queries to make sure it works fine and looks good on a smaller screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 html {
     scroll-behavior: smooth;
   }
-  
+
 body {
     font-family: 'Alegreya', serif;
 }
@@ -120,20 +120,45 @@ a:active {
 
 #about {
     margin-top: 20px;
+    
+    /*align-items: center;*/
+    
 }
 
+.about-container{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+#about .about-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-box{
+    flex: 1;
+}
+
+/*
 #about .about-box {
     float: left;
     width: 30%;
     padding: 10px;
     align-content: center;
 }
+*/
 
 #about .about-box img {
     border-radius: 300px;
-    width: 300px;
+    max-width: 250px;
+    margin-left: 55px;
+    margin-top: 15px;
+
 
 }
+
+
 
 /* gallery */
 
@@ -181,7 +206,7 @@ div.desc {
 
 
 #form {
-    clear: let;
+    clear: left;
     background-size: cover;
     background-position: center;
     height: 900px;
@@ -247,6 +272,12 @@ footer li {
     list-style-type: none;
 }
 
+#footer-text{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /*gap: 0px;*/
+}
+
 footer a {
     text-decoration: none;
 }
@@ -254,3 +285,24 @@ footer a {
 #footer-text a {
     color: #E6C4E5;
 }
+
+footer i{
+    margin-right: 5px;
+}
+
+/* media screens */
+
+@media (max-width: 768px) {
+#about .about-container {
+    flex-direction: column;
+    text-align: center;
+}
+#footer-text span { display: none; }
+}
+
+
+
+
+/*@media only screen and (max-width: 600px) */
+
+
